--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             apiKey: "AIzaSyBCoUHQ0SwXH5QZgm35gWCtcPdAZPl3Xvw",
             authDomain: "garagem-da686.firebaseapp.com",
             projectId: "garagem-da686",
-            storageBucket: "garagem-da686.appspot.com",
+            storageBucket: "garagem-da686.firebasestorage.app",
             messagingSenderId: "794405215347",
             appId: "1:794405215347:web:dbe210d32475faf385de06"
         };
